src/tests/code/fail/fail_literal_uint_parameter_type_mismatch.u
increment:(x:float)->(:float(x+1))

entrypoint: ~()->(iErrorCode:~int(1))
{
	iErrorCode = cast<int>(increment(0));
}
